...
<!--    <string name="copy_revocer_no">Cancel</string>-->

    <!-- delete dialog-->
<!--    <string name="delet_message">Are you sure to delete?</string>-->
<!--    <string name="please_select_data">Please select data！</string>-->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="continue_">Continue</string>

    <string name="language">Language</string>

<!--    <string name="default_welcome_page">Default Welcome Page</string>-->
<!--    <string name="login_page">Login Page</string>-->
...
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="select_a_date_range">Select a date range</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="id">ID</string>
    <string name="visit_date">Visit date</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
...
    <string name="usb">USB</string>
    <string name="uploading_x1_files_to_x2">Uploading %1$s files to %2$s</string>
    <string name="copy_files_progress_dialog_msg">**The file exported by this tool is no longer encrypted. Please keep the information confidential.</string>
    <string name="x_min">%1$s min</string>
    <string name="x_sec">%1$s sec</string>
    <string name="x1_mb_x2_mb">%1$s MB / %2$s MB</string>
    <string name="close">Close</string>
    <string name="complete">Complete</string>
    <string name="fail">Fail</string>
    <string name="date_time_display_formate">Date Time Display Format</string>
    <string name="_12_hours">12 Hours</string>
    <string name="_24_hours">24 Hours</string>
    <string name="screen_auto_rotate">Screen Auto Rotate</string>
...
    <string name="delete_selected_users">Delete Selected Users</string>
    <string name="advanced_user">User</string>
    <string name="admin_user">Admin User</string>
    <string name="service_user">Service User</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_delete_it">Are you sure delete it ?</string>
    <string name="user">User</string>
    <string name="type">Type</string>
    <string name="type_02">*Type</string>
    <string name="account">Account</string>
    <string name="account_02">*Account</string>
    <string name="password_02">*Password</string>
    <string name="repeat_password">*Repeat Password</string>
    <string name="create">Create</string>
    <string name="account_is_required">Account is required.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="repeat_password_is_required">Repeat Password is required.</string>
    <string name="repeat_password_is_incorrect">Repeat Password is incorrect.</string>
    <string name="account_is_existed">Account is existed.</string>
    <string name="login">Login</string>
    <string name="remember_your_account">Remember your Account</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_failed_msg">The account or password you entered is incorrect.\nPlease try again</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">*Old Password</string>
    <string name="new_password">*New Password</string>
    <string name="confirm_password">*Confirm Password</string>
    <string name="old_password_is_incorrect">Old Password is incorrect.</string>
    <string name="old_password_is_required">Old Password is required.</string>
...
