...

                            </androidx.appcompat.widget.LinearLayoutCompat>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/search"
                            android:layout_width="@dimen/layout_width_80"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_16"
                            android:background="@drawable/bg_serch"
                            android:paddingStart="@dimen/padding_16"
                            android:paddingEnd="@dimen/padding_16"
...

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:clipToPadding="false"
                                android:fadeScrollbars="false"
                                android:scrollbarAlwaysDrawHorizontalTrack="true"
                                android:scrollbarSize="8dp"
...
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/loadingLayout"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:background="@color/gray_01000000"
                                android:gravity="center"
                                android:visibility="gone"
                                app:layout_constraintBottom_toBottomOf="parent"
...
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/screenshot"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
...
                                android:background="@drawable/bg_filename"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/previewFileInfo"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:paddingStart="@dimen/padding_8"
...
                                app:layout_constraintDimensionRatio="1:1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/previewFileInfoBar">

                                <androidx.media3.ui.PlayerView
                                    android:id="@+id/playerView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:clickable="true"
                                    android:visibility="invisible"
                                    app:auto_show="true"
                                    app:controller_layout_id="@layout/layout_exo_playback_control"
...
                                    app:shutter_background_color="@color/black"
                                    app:surface_type="texture_view"
                                    app:use_controller="true"
                                    tools:visibility="visible" />

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/previewImg"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/black" />

                            </FrameLayout>

...
                            app:backgroundTint="@color/btn_color_01"
                            app:cornerRadius="8dp"
                            app:strokeWidth="0dp"
                            tools:visibility="visible" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/basicExport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/basic_export"
                            android:textAllCaps="false"
...
