...

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibLiveView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="12px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
...
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibDataManagement"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="15px"
                    android:layout_marginTop="14px"
                    android:layout_marginEnd="15px"
                    android:layout_weight="1"
...
